fix wm author photo distortion

--- a/src/assets/styles/components/_webmention.scss
+++ b/src/assets/styles/components/_webmention.scss
@@ -30,6 +30,7 @@
             height: 48px;
             width: 48px;
             border-radius: 50%;
+            object-fit: cover;
         }
     }
     &__pubdate {
